--- a/pytest.ini
+++ b/pytest.ini
@@ -15,7 +15,7 @@ python_files=test_*.py
 python_classes=Test
 python_functions=test_
 
-norecursedirs= venv
+norecursedirs= venv learn_theano/utils/midi
 
 # PEP-8 The following are ignored:
 # E251 unexpected spaces around keyword / parameter equals
