--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.9.2
 PySide==1.2.1
 matplotlib==1.3.1
-theano==0.7.0
 boto==2.38.0
 pillow==3.0.0
+keras==0.3.0
 
 # Test functionality
 pep8==1.6.2
