--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
   - sudo apt-get -y install liblapack-dev gfortran cmake
   - sudo apt-get install -y --force-yes python-pyside
 install:
-  - travis_wait source use_repo.sh
+  - source use_repo.sh
 script:
   # initialize keras config
-  - python -c "import keras.backend"
+  #- python -c "import keras.backend"
   - py.test
